# NookLibrary

./: CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: main.yml
include/NOOK/Games/: Games.h  InfiniteRunner.h  Platformer.h  Pong.h
include/NOOK/Systems/GameLogic/: GameLogicSystem.h  GameOverSystem.h  PauseSystem.h
include/NOOK/Systems/Movement/: JumpSystem.h  MovementSystem.h
include/NOOK/Systems/Physics/: PhysicsSystem.h
include/NOOK/Systems/Render/: RenderShapeSystem.h  RenderSpriteSystem.h  RenderTextSystem.h
include/NOOK/Utils/: Register.h
src/Utils/: Register.cpp
